Adding New Stuff

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">MusicApp</string>
+    <string name="MixMaker">MixMaker</string>
     <item type="id" name ="ImageButton_ID"/>
 </resources>
