--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,30 @@
 <resources>
     <string name="MixMaker">MixMaker</string>
-    <item type="id" name ="ImageButton_ID"/>
+    <item name="ImageButton_ID" type="id" />
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome!"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
+
+    <!-- Strings related to other stuff-->
+    <string name="login_text"> "Welcome to MixMaker, where your music journey begins! Discover, listen, and enjoy your favorite tunes with ease.</string>
+
+    <!--For the search bar, the arrrrrrrrrrrrrray-->
+    <string-array name="song_albums">
+        <item>Lover by Taylor Swift</item>
+        <item>Perfect by Ed Sheeran</item>
+        <item>Watermelon Sugar by Harry Styles</item>
+        <item>The Now Now by Gorillaz</item>
+        <item>The Incredible True Story by Logic</item>
+
+    </string-array>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
